--- a/config
+++ b/config
@@ -2,7 +2,7 @@
 # Automatically generated file; DO NOT EDIT.
 # Linux/arm64 6.9.4-1 Kernel Configuration
 #
-CONFIG_CC_VERSION_TEXT="aarch64-unknown-linux-gnu-gcc (GCC) 14.1.1 20240507"
+CONFIG_CC_VERSION_TEXT="gcc (GCC) 14.1.1 20240507"
 CONFIG_CC_IS_GCC=y
 CONFIG_GCC_VERSION=140101
 CONFIG_CLANG_VERSION=0
@@ -317,9 +317,9 @@ CONFIG_ARCH_SUNXI=y
 CONFIG_ARCH_APPLE=y
 CONFIG_ARCH_BCM=y
 CONFIG_ARCH_BCM2835=y
-# CONFIG_ARCH_BCM_IPROC is not set
-# CONFIG_ARCH_BCMBCA is not set
-# CONFIG_ARCH_BRCMSTB is not set
+CONFIG_ARCH_BCM_IPROC=y
+CONFIG_ARCH_BCMBCA=y
+CONFIG_ARCH_BRCMSTB=y
 # CONFIG_ARCH_BERLIN is not set
 # CONFIG_ARCH_BITMAIN is not set
 # CONFIG_ARCH_EXYNOS is not set
@@ -2036,6 +2036,9 @@ CONFIG_HOTPLUG_PCI_ACPI=y
 # CONFIG_PCIE_ALTERA is not set
 # CONFIG_PCIE_APPLE is not set
 CONFIG_PCIE_BRCMSTB=y
+CONFIG_PCIE_IPROC=y
+CONFIG_PCIE_IPROC_PLATFORM=y
+CONFIG_PCIE_IPROC_MSI=y
 # CONFIG_PCI_HOST_THUNDER_PEM is not set
 # CONFIG_PCI_HOST_THUNDER_ECAM is not set
 # CONFIG_PCI_FTPCI100 is not set
@@ -2149,6 +2152,7 @@ CONFIG_GENERIC_ARCH_TOPOLOGY=y
 #
 CONFIG_ARM_CCI=y
 CONFIG_ARM_CCI400_COMMON=y
+CONFIG_BRCMSTB_GISB_ARB=y
 # CONFIG_MOXTET is not set
 CONFIG_SUN50I_DE2_BUS=y
 CONFIG_SUNXI_RSB=y
@@ -2251,8 +2255,11 @@ CONFIG_MTD=y
 #
 # Partition parsers
 #
+# CONFIG_MTD_BRCM_U_BOOT is not set
 # CONFIG_MTD_CMDLINE_PARTS is not set
 CONFIG_MTD_OF_PARTS=m
+CONFIG_MTD_OF_PARTS_BCM4908=y
+# CONFIG_MTD_OF_PARTS_LINKSYS_NS is not set
 # CONFIG_MTD_AFS_PARTS is not set
 # CONFIG_MTD_REDBOOT_PARTS is not set
 # end of Partition parsers
@@ -2648,6 +2655,7 @@ CONFIG_SATA_PMP=y
 CONFIG_SATA_AHCI=y
 CONFIG_SATA_MOBILE_LPM_POLICY=0
 CONFIG_SATA_AHCI_PLATFORM=y
+# CONFIG_AHCI_BRCM is not set
 CONFIG_AHCI_DWC=y
 # CONFIG_AHCI_CEVA is not set
 CONFIG_AHCI_SUNXI=y
@@ -2815,7 +2823,7 @@ CONFIG_FIREWIRE_NOSY=m
 # end of IEEE 1394 (FireWire) support
 
 CONFIG_NETDEVICES=y
-CONFIG_MII=m
+CONFIG_MII=y
 CONFIG_NET_CORE=y
 CONFIG_BONDING=m
 CONFIG_DUMMY=m
@@ -2936,6 +2944,7 @@ CONFIG_B44=m
 CONFIG_B44_PCI_AUTOSELECT=y
 CONFIG_B44_PCICORE_AUTOSELECT=y
 CONFIG_B44_PCI=y
+CONFIG_BCM4908_ENET=y
 CONFIG_BCMGENET=m
 CONFIG_BNX2=m
 CONFIG_CNIC=m
@@ -2943,8 +2952,11 @@ CONFIG_TIGON3=m
 CONFIG_TIGON3_HWMON=y
 CONFIG_BNX2X=m
 CONFIG_BNX2X_SRIOV=y
+CONFIG_BGMAC=y
+CONFIG_BGMAC_PLATFORM=y
 # CONFIG_SYSTEMPORT is not set
 # CONFIG_BNXT is not set
+CONFIG_BCMASP=y
 CONFIG_NET_VENDOR_CADENCE=y
 CONFIG_MACB=m
 CONFIG_MACB_USE_HWSTAMP=y
@@ -3138,6 +3150,7 @@ CONFIG_BROADCOM_PHY=m
 CONFIG_BCM7XXX_PHY=m
 # CONFIG_BCM84881_PHY is not set
 CONFIG_BCM87XX_PHY=m
+# CONFIG_BCM_CYGNUS_PHY is not set
 CONFIG_BCM_NET_PHYLIB=m
 CONFIG_CICADA_PHY=m
 # CONFIG_CORTINA_PHY is not set
@@ -3258,7 +3271,8 @@ CONFIG_ACPI_MDIO=y
 CONFIG_MDIO_DEVRES=y
 CONFIG_MDIO_SUN4I=m
 CONFIG_MDIO_BITBANG=m
-CONFIG_MDIO_BCM_UNIMAC=m
+CONFIG_MDIO_BCM_IPROC=y
+CONFIG_MDIO_BCM_UNIMAC=y
 # CONFIG_MDIO_GPIO is not set
 # CONFIG_MDIO_HISI_FEMAC is not set
 CONFIG_MDIO_I2C=m
@@ -3273,9 +3287,10 @@ CONFIG_MDIO_REGMAP=m
 #
 # MDIO Multiplexers
 #
-CONFIG_MDIO_BUS_MUX=m
+CONFIG_MDIO_BUS_MUX=y
 CONFIG_MDIO_BUS_MUX_MESON_G12A=m
 CONFIG_MDIO_BUS_MUX_MESON_GXL=m
+CONFIG_MDIO_BUS_MUX_BCM_IPROC=y
 CONFIG_MDIO_BUS_MUX_GPIO=m
 # CONFIG_MDIO_BUS_MUX_MULTIPLEXER is not set
 CONFIG_MDIO_BUS_MUX_MMIOREG=m
@@ -3459,7 +3474,7 @@ CONFIG_BRCMFMAC_PROTO_MSGBUF=y
 CONFIG_BRCMFMAC_SDIO=y
 CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMFMAC_PCIE=y
-CONFIG_BRCM_TRACING=y
+# CONFIG_BRCM_TRACING is not set
 # CONFIG_BRCMDBG is not set
 CONFIG_WLAN_VENDOR_INTEL=y
 CONFIG_IPW2100=m
@@ -3858,6 +3873,7 @@ CONFIG_TOUCHSCREEN_GOODIX=m
 # CONFIG_TOUCHSCREEN_HYNITRON_CSTXXX is not set
 CONFIG_TOUCHSCREEN_ILI210X=m
 CONFIG_TOUCHSCREEN_ILITEK=m
+# CONFIG_TOUCHSCREEN_IPROC is not set
 # CONFIG_TOUCHSCREEN_S6SY761 is not set
 CONFIG_TOUCHSCREEN_GUNZE=m
 # CONFIG_TOUCHSCREEN_EKTF2127 is not set
@@ -4034,14 +4050,15 @@ CONFIG_SERIAL_8250_MANY_PORTS=y
 # CONFIG_SERIAL_8250_PCI1XXXX is not set
 CONFIG_SERIAL_8250_SHARE_IRQ=y
 # CONFIG_SERIAL_8250_DETECT_IRQ is not set
-# CONFIG_SERIAL_8250_RSA is not set
+CONFIG_SERIAL_8250_RSA=y
 CONFIG_SERIAL_8250_DWLIB=y
-CONFIG_SERIAL_8250_BCM2835AUX=m
+CONFIG_SERIAL_8250_BCM2835AUX=y
 CONFIG_SERIAL_8250_FSL=y
 CONFIG_SERIAL_8250_DW=y
 # CONFIG_SERIAL_8250_RT288X is not set
 # CONFIG_SERIAL_8250_PERICOM is not set
 CONFIG_SERIAL_8250_TEGRA=m
+CONFIG_SERIAL_8250_BCM7271=y
 CONFIG_SERIAL_OF_PLATFORM=y
 
 #
@@ -4068,6 +4085,7 @@ CONFIG_SERIAL_JSM=m
 # CONFIG_SERIAL_SIFIVE is not set
 # CONFIG_SERIAL_SCCNXP is not set
 # CONFIG_SERIAL_SC16IS7XX is not set
+# CONFIG_SERIAL_BCM63XX is not set
 # CONFIG_SERIAL_ALTERA_JTAGUART is not set
 # CONFIG_SERIAL_ALTERA_UART is not set
 # CONFIG_SERIAL_XILINX_PS_UART is not set
@@ -4204,6 +4222,7 @@ CONFIG_I2C_SCMI=m
 # I2C system bus drivers (mostly embedded / system-on-chip)
 #
 CONFIG_I2C_BCM2835=m
+# CONFIG_I2C_BCM_IPROC is not set
 CONFIG_I2C_BRCMSTB=m
 # CONFIG_I2C_CADENCE is not set
 # CONFIG_I2C_CBUS_GPIO is not set
@@ -4270,8 +4289,10 @@ CONFIG_SPI_MEM=y
 # CONFIG_SPI_AXI_SPI_ENGINE is not set
 CONFIG_SPI_BCM2835=m
 CONFIG_SPI_BCM2835AUX=m
+# CONFIG_SPI_BCM63XX_HSSPI is not set
 # CONFIG_SPI_BCM_QSPI is not set
-CONFIG_SPI_BITBANG=m
+# CONFIG_SPI_BCMBCA_HSSPI is not set
+CONFIG_SPI_BITBANG=y
 # CONFIG_SPI_CADENCE is not set
 # CONFIG_SPI_CADENCE_QUADSPI is not set
 # CONFIG_SPI_CADENCE_XSPI is not set
@@ -4281,7 +4302,7 @@ CONFIG_SPI_DW_DMA=y
 # CONFIG_SPI_DW_MMIO is not set
 # CONFIG_SPI_HISI_KUNPENG is not set
 # CONFIG_SPI_HISI_SFC_V3XX is not set
-CONFIG_SPI_GPIO=m
+CONFIG_SPI_GPIO=y
 # CONFIG_SPI_FSL_SPI is not set
 CONFIG_SPI_MESON_SPICC=m
 CONFIG_SPI_MESON_SPIFC=m
@@ -4343,6 +4364,7 @@ CONFIG_PPS_CLIENT_GPIO=m
 #
 CONFIG_PTP_1588_CLOCK=m
 CONFIG_PTP_1588_CLOCK_OPTIONAL=m
+CONFIG_PTP_1588_CLOCK_DTE=m
 
 #
 # Enable PHYLIB and NETWORK_PHY_TIMESTAMPING to see the additional clocks.
@@ -4381,6 +4403,9 @@ CONFIG_PINCTRL_SINGLE=y
 CONFIG_PINCTRL_RP1=y
 CONFIG_PINCTRL_BCM2712=y
 CONFIG_PINCTRL_BCM2835=y
+CONFIG_PINCTRL_BCM4908=y
+CONFIG_PINCTRL_IPROC_GPIO=y
+CONFIG_PINCTRL_NS2_MUX=y
 CONFIG_PINCTRL_MESON=y
 CONFIG_PINCTRL_MESON_GXBB=y
 CONFIG_PINCTRL_MESON_GXL=y
@@ -4448,6 +4473,8 @@ CONFIG_GPIO_MAX730X=m
 # CONFIG_GPIO_ALTERA is not set
 # CONFIG_GPIO_AMDPT is not set
 CONFIG_GPIO_RASPBERRYPI_EXP=y
+CONFIG_GPIO_BCM_XGS_IPROC=y
+CONFIG_GPIO_BRCMSTB=y
 # CONFIG_GPIO_CADENCE is not set
 CONFIG_GPIO_DWAPB=y
 # CONFIG_GPIO_EXAR is not set
@@ -4567,6 +4594,7 @@ CONFIG_W1_SLAVE_DS28E17=m
 # end of 1-wire Slaves
 
 CONFIG_POWER_RESET=y
+CONFIG_POWER_RESET_BRCMSTB=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 # CONFIG_POWER_RESET_ODROID_GO_ULTRA_POWEROFF is not set
@@ -4906,6 +4934,9 @@ CONFIG_AMLOGIC_THERMAL=m
 #
 CONFIG_BCM2711_THERMAL=m
 CONFIG_BCM2835_THERMAL=m
+# CONFIG_BRCMSTB_THERMAL is not set
+CONFIG_BCM_NS_THERMAL=y
+CONFIG_BCM_SR_THERMAL=y
 # end of Broadcom thermal drivers
 
 #
@@ -4956,6 +4987,7 @@ CONFIG_APPLE_WATCHDOG=m
 # CONFIG_I6300ESB_WDT is not set
 # CONFIG_HP_WATCHDOG is not set
 CONFIG_BCM2835_WDT=m
+# CONFIG_BCM7038_WDT is not set
 # CONFIG_MEN_A21_WDT is not set
 
 #
@@ -4985,8 +5017,9 @@ CONFIG_BCMA=m
 CONFIG_BCMA_BLOCKIO=y
 CONFIG_BCMA_HOST_PCI_POSSIBLE=y
 CONFIG_BCMA_HOST_PCI=y
-# CONFIG_BCMA_HOST_SOC is not set
+CONFIG_BCMA_HOST_SOC=y
 CONFIG_BCMA_DRIVER_PCI=y
+CONFIG_BCMA_SFLASH=y
 CONFIG_BCMA_DRIVER_GMAC_CMN=y
 CONFIG_BCMA_DRIVER_GPIO=y
 # CONFIG_BCMA_DEBUG is not set
@@ -7312,6 +7345,8 @@ CONFIG_USB_XHCI_PCI=y
 # CONFIG_USB_XHCI_PCI_RENESAS is not set
 CONFIG_USB_XHCI_PLATFORM=y
 CONFIG_USB_XHCI_TEGRA=m
+CONFIG_USB_EHCI_BRCMSTB=y
+CONFIG_USB_BRCMSTB=y
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
@@ -7527,6 +7562,7 @@ CONFIG_USB_HSIC_USB3503=m
 CONFIG_USB_HSIC_USB4604=m
 # CONFIG_USB_LINK_LAYER_TEST is not set
 CONFIG_USB_CHAOSKEY=m
+CONFIG_BRCM_USB_PINMAP=y
 # CONFIG_USB_ONBOARD_HUB is not set
 CONFIG_USB_ATM=m
 # CONFIG_USB_SPEEDTOUCH is not set
@@ -7740,6 +7776,7 @@ CONFIG_MMC_HSQ=y
 # CONFIG_MMC_TOSHIBA_PCI is not set
 CONFIG_MMC_BCM2835=y
 CONFIG_MMC_MTK=m
+CONFIG_MMC_SDHCI_BRCMSTB=y
 CONFIG_MMC_SDHCI_XENON=m
 CONFIG_SCSI_UFSHCD=m
 # CONFIG_SCSI_UFS_BSG is not set
@@ -7816,6 +7853,7 @@ CONFIG_LEDS_SYSCON=y
 CONFIG_LEDS_USER=m
 # CONFIG_LEDS_SPI_BYTE is not set
 # CONFIG_LEDS_LM3697 is not set
+CONFIG_LEDS_BCM63138=y
 
 #
 # Flash and Torch LED drivers
@@ -7894,6 +7932,7 @@ CONFIG_RTC_DRV_TEST=m
 # CONFIG_RTC_DRV_ABB5ZES3 is not set
 # CONFIG_RTC_DRV_ABEOZ9 is not set
 CONFIG_RTC_DRV_ABX80X=m
+CONFIG_RTC_DRV_BRCMSTB=y
 CONFIG_RTC_DRV_DS1307=m
 # CONFIG_RTC_DRV_DS1307_CENTURY is not set
 CONFIG_RTC_DRV_DS1374=m
@@ -8286,7 +8325,11 @@ CONFIG_COMMON_CLK_PWM=y
 # CONFIG_COMMON_CLK_FIXED_MMIO is not set
 CONFIG_CLK_BCM2711_DVP=y
 CONFIG_CLK_BCM2835=y
-CONFIG_CLK_RASPBERRYPI=m
+CONFIG_CLK_BCM_63XX=y
+CONFIG_COMMON_CLK_IPROC=y
+CONFIG_CLK_BCM_NS2=y
+CONFIG_CLK_BCM_SR=y
+CONFIG_CLK_RASPBERRYPI=y
 
 #
 # Clock support for Amlogic platforms
@@ -8370,6 +8413,8 @@ CONFIG_PCC=y
 CONFIG_BCM2835_MBOX=y
 # CONFIG_MAILBOX_TEST is not set
 CONFIG_TEGRA_HSP_MBOX=y
+# CONFIG_BCM_PDC_MBOX is not set
+CONFIG_BCM_FLEXRM_MBOX=m
 CONFIG_SUN6I_MSGBOX=y
 CONFIG_IOMMU_IOVA=y
 CONFIG_IOMMU_API=y
@@ -8442,6 +8487,7 @@ CONFIG_APPLE_SART=m
 #
 # Broadcom SoC drivers
 #
+CONFIG_SOC_BRCMSTB=y
 # end of Broadcom SoC drivers
 
 #
@@ -8520,6 +8566,7 @@ CONFIG_ARM_SCPI_POWER_DOMAIN=y
 #
 CONFIG_BCM2835_POWER=y
 CONFIG_RASPBERRYPI_POWER=y
+CONFIG_BCM_PMB=y
 # end of Broadcom PM Domains
 
 #
@@ -8574,6 +8621,8 @@ CONFIG_EXTCON_USBC_CROS_EC=m
 # CONFIG_EXTCON_USBC_TUSB320 is not set
 CONFIG_MEMORY=y
 # CONFIG_ARM_PL172_MPMC is not set
+CONFIG_BRCMSTB_DPFE=y
+CONFIG_BRCMSTB_MEMC=y
 CONFIG_TEGRA_MC=y
 # CONFIG_TEGRA210_EMC is not set
 CONFIG_IIO=y
@@ -8682,6 +8731,7 @@ CONFIG_AD799X=m
 # CONFIG_ADI_AXI_ADC is not set
 CONFIG_AXP20X_ADC=m
 CONFIG_AXP288_ADC=m
+# CONFIG_BCM_IPROC_ADC is not set
 CONFIG_CC10001_ADC=m
 CONFIG_ENVELOPE_DETECTOR=m
 CONFIG_HI8435=m
@@ -9222,10 +9272,13 @@ CONFIG_PWM_SYSFS=y
 # CONFIG_PWM_DEBUG is not set
 CONFIG_PWM_APPLE=m
 # CONFIG_PWM_ATMEL_TCB is not set
+CONFIG_PWM_BCM_IPROC=y
 CONFIG_PWM_BCM2835=m
-# CONFIG_PWM_CLK is not set
-CONFIG_PWM_CROS_EC=m
-# CONFIG_PWM_DWC is not set
+CONFIG_PWM_BRCMSTB=m
+CONFIG_PWM_CLK=m
+# CONFIG_PWM_CROS_EC is not set
+CONFIG_PWM_DWC_CORE=m
+CONFIG_PWM_DWC=m
 # CONFIG_PWM_FSL_FTM is not set
 CONFIG_PWM_MESON=m
 # CONFIG_PWM_PCA9685 is not set
@@ -9249,6 +9302,8 @@ CONFIG_ARM_GIC_V3_ITS=y
 CONFIG_ARM_GIC_V3_ITS_PCI=y
 # CONFIG_AL_FIC is not set
 CONFIG_BCM2712_MIP=y
+CONFIG_BCM7038_L1_IRQ=y
+CONFIG_BCM7120_L2_IRQ=y
 CONFIG_BRCMSTB_L2_IRQ=y
 CONFIG_SUN6I_R_INTC=y
 CONFIG_SUNXI_NMI_INTC=y
@@ -9261,6 +9316,8 @@ CONFIG_APPLE_AIC=y
 # CONFIG_IPACK_BUS is not set
 CONFIG_ARCH_HAS_RESET_CONTROLLER=y
 CONFIG_RESET_CONTROLLER=y
+CONFIG_RESET_BRCMSTB=y
+CONFIG_RESET_BRCMSTB_RESCAL=y
 # CONFIG_RESET_GPIO is not set
 CONFIG_RESET_MESON=y
 CONFIG_RESET_MESON_AUDIO_ARB=m
@@ -9294,8 +9351,15 @@ CONFIG_PHY_MESON_AXG_MIPI_DPHY=y
 #
 # PHY drivers for Broadcom platforms
 #
+CONFIG_PHY_BCM_SR_USB=y
 # CONFIG_BCM_KONA_USB2_PHY is not set
-# CONFIG_PHY_BRCM_USB is not set
+# CONFIG_PHY_BCM_NS_USB2 is not set
+# CONFIG_PHY_BCM_NS_USB3 is not set
+CONFIG_PHY_NS2_PCIE=y
+CONFIG_PHY_NS2_USB_DRD=y
+# CONFIG_PHY_BRCM_SATA is not set
+CONFIG_PHY_BRCM_USB=y
+CONFIG_PHY_BCM_SR_PCIE=y
 # end of PHY drivers for Broadcom platforms
 
 # CONFIG_PHY_CADENCE_TORRENT is not set
@@ -9386,6 +9450,7 @@ CONFIG_NVMEM_LAYOUTS=y
 # end of Layout Types
 
 CONFIG_NVMEM_APPLE_EFUSES=m
+CONFIG_NVMEM_BCM_OCOTP=y
 # CONFIG_NVMEM_MESON_EFUSE is not set
 # CONFIG_NVMEM_MESON_MX_EFUSE is not set
 CONFIG_NVMEM_RMEM=m
@@ -10118,6 +10183,7 @@ CONFIG_CRYPTO_DEV_ROCKCHIP=m
 # CONFIG_CRYPTO_DEV_ROCKCHIP_DEBUG is not set
 # CONFIG_CRYPTO_DEV_ROCKCHIP2 is not set
 CONFIG_CRYPTO_DEV_VIRTIO=m
+CONFIG_CRYPTO_DEV_BCM_SPU=m
 CONFIG_CRYPTO_DEV_SAFEXCEL=m
 CONFIG_CRYPTO_DEV_CCREE=m
 # CONFIG_CRYPTO_DEV_HISI_SEC is not set
